DeployMyNodeApp/k8s_descriptors/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: backend-mongodb
    name: backend-mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend-mongodb
    template:
        metadata:
            labels:
                app: backend-mongodb
        spec:
            containers:
            - image: mongo
              imagePullPolicy: IfNotPresent
              name: backend-mongodb
              ports:
              - containerPort: 27017
