DeployMyNodeApp/k8s_descriptors/nodeapp_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: frontend
    name: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
            - image: chriscloudreach/newnode:v6.0.0pathresol
              imagePullPolicy: IfNotPresent
              name: frontend
              ports:
              - containerPort: 3000
