DeployMyNodeApp/k8s_descriptors/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: backend-redis
    name: backend-redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend-redis
    template:
        metadata:
            labels:
                app: backend-redis
        spec:
            containers:
            - image: redis
              imagePullPolicy: IfNotPresent
              name: backend-redis
