DeployMyNodeApp/k8s_descriptors/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: backend-mongodb
    name: mydb
spec:
    ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
    selector:
        app: backend-mongodb
    type: ClusterIP
