DeployMyNodeApp/k8s_descriptors/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: backend-redis
    name: redis
spec:
    ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
        app: backend-redis
    type: ClusterIP
