DeployMyNodeApp/k8s_descriptors/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#     name: frontend-ingress
# spec:
#     rules:
#     - http:
#         paths:
#         - path: /api
#           backend:
#             serviceName: frontend-svc
#             servicePort: 3000


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
#   # namespace: foo
# spec:
#   ingressClassName: nginx
#   rules:
#       http:
#         paths:
#           - pathType: Prefix
#             backend:
#               service:
#                 name: frontend-svc
#                 port:
#                   number: 3000
#             path: /api

# NOT WORKING YET, NEED MORE WORK

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api/v1/users/signup
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api/v1/users/login
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /api/v1/posts
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
